k8slearn/2.Kubernetes 基础/pod-poststart.yaml
# pod-poststart.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hook-demo1
spec:
  containers:
    - name: hook-demo1
      image: nginx
      lifecycle:
        postStart:
          exec:
            command:
              [
                '/bin/sh',
                '-c',
                'echo Hello from the postStart handler > /usr/share/message',
              ]
